feat: extend schedule date range
